--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
         <!-- project-1 -->
         <div class="border">
           <!-- Phần hình ảnh -->
-          <img src="/images/project_1.png" alt="web-project-image" class="image-certificate image-fluid"/>
+          <img src="images/project_1.png" alt="web-project-image" class="image-certificate image-fluid"/>
           <!-- Phần tiêu đề -->
           <a class="text-decoration-none text-black" href="project-chapter-1.html"><div class="text-uppercase text-bolder ps-3 py-2 border-bottom project fw-medium">cv cá nhân</div></a>
           <!-- Phần thời gian -->
@@ -588,3 +588,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   </body>
 </html>
+
