--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
         <!-- project-2 -->
         <div class="border">
           <!-- Phần hình ảnh -->
-          <img src="/images/project_2.png" alt="pet-management-img" class="image-certificate"/>
+          <img src="images/project_2.png" alt="pet-management-img" class="image-certificate"/>
           <!-- Phần tiêu đề -->
           <a class="text-decoration-none text-black" href="project-chapter-2.html"><div class="text-uppercase text-bolder ps-3 py-2 border-bottom project fw-medium">Trang web quản lí thú cưng</div></a>
           <!-- Phần thời gian -->
@@ -524,7 +524,7 @@
         <!-- Project-3 -->
         <div class="border">
           <!-- Phần hình ảnh -->
-          <img src="/images/project_3.png" alt="news-webpage-image" class="image-certificate" />
+          <img src="images/project_3.png" alt="news-webpage-image" class="image-certificate" />
           <!-- Phần tiêu đề-->
           <a class="text-decoration-none text-black" href="project-chapter-3.html"><div class="text-uppercase text-bolder ps-3 py-2 border-bottom project fw-medium">Trang web xem tin tức</div></a>
           <!-- Phần thời gian -->
@@ -588,4 +588,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   </body>
 </html>
+
 
