--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
         <div class="col-md-6 d-flex flex-mobile flex-tablet flex-laptop line-md-between line-mobile-bottom tablet-image-only gap-0">
           <div class="container">
             <img
-            src="/images/Cert_WEB.png"
+            src="images/Cert_WEB.png"
             alt="web-certificate"
             class=" image-certificate"
             />
@@ -404,7 +404,7 @@
         <!-- Chứng chỉ lập trình JavaScript -->
         <div class="col-md-6 d-flex flex-mobile flex-tablet flex-laptop line-mobile-bottom tablet-image-only gap-0">
           <div class="container">
-            <img src="/images/Cert_PRF.png" 
+            <img src="images/Cert_PRF.png" 
             alt="java-certificate" 
             class=" image-certificate"/>
           </div>
@@ -419,7 +419,7 @@
         <!-- CHứng chỉ thiết kế DATABASE -->
         <div class="col-md-6 d-flex flex-mobile flex-tablet flex-laptop tablet-image-only gap-0">
           <div class="container">
-            <img src="/images/Cert_DBI.png" 
+            <img src="images/Cert_DBI.png" 
             alt="database-certificate" 
             class="image-certificate"/>
           </div>
@@ -588,5 +588,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   </body>
 </html>
+
 
 
